--- a/style.css
+++ b/style.css
@@ -1,12 +1,57 @@
+*{
+  font-family: 'Noto Sans KR', sans-serif;
+  list-style: none;
+  text-decoration: none;
+  border-collapse: collapse;
+  margin:0px;
+  padding: 0px;
+  color: #000;
+}
 
-                font-family: 'Noto Sans KR', sans-serif;
 
-/*               목록에 점 없애는 기능*/
-               list-style: none;
-               text-decoration: none;
-/*               테이블에 선이 떨어져있는데 붙어주는 기능*/
-               border-collapse: collapse;
-               margin: 1px;
-               padding: 1px;
-/*               폰트색깔*/
-               color: #000;
+.intro_bg{
+  background-image: url("images/contact.png");
+  width: 100%;
+  height: 714px;
+}
+
+
+
+.header{
+  width:1280px;
+  margin:auto;
+  display:flex;
+  height: 86px;
+}
+.searchArea{
+  width:300px;
+  height:40px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  margin-top:24px;
+}
+.searchArea > form > inpu{
+  border:none;
+  width:250px;
+  height:40px;
+  background: rgba(0, 0, 0, 0.0);
+  color:#fff;
+  padding-left:10px;
+}
+.searchArea > form > span{
+  width:50px;
+  color:#fff;
+}
+.nav{
+  display: flex;
+  justify-content: flex-end;
+  width:calc(1280px - 300px);
+  line-height: 86px;
+}
+.nav > li {
+  margin-left:84px;
+}
+
+.nav > li >a{
+    color: aliceblue;
+}
