--- a/style.css
+++ b/style.css
@@ -15,8 +15,18 @@
   height: 714px;
 }
 
+h1{
+    font-size: 48px;
+    font-weight: 100;
+}
 
-
+.contents1{
+    font-size: 20px;
+    font-weight: lighter;
+}
+.res{
+    font-size: 24px;
+}
 .header{
   width:1280px;
   margin:auto;
@@ -55,3 +65,47 @@
 .nav > li >a{
     color: aliceblue;
 }
+
+
+.amount{
+    position: relative;
+    top: -66px;
+     display: flex;
+    width: 1200px;
+
+    background: #fff;
+    margin: auto;
+}
+.amount >li{
+    flex: 1;
+    height: 132px;
+    background: #fff;
+}
+
+.amout > li >div{
+    text-align: center;
+    margin-top: 37px;
+    height: 57px;
+}
+
+.amount >li:not(:last-child)>div{
+    border-right: 1px solid gray;
+}
+
+
+
+.intro_text{
+    width: 100%;
+/*    상 , 우 ,좌,하*/
+    margin: 231px auto 231px,auto;
+
+
+    text-align: center;
+
+}
+.intro_text > h1,
+.intro_text > h2{
+    color: #fff
+}
+
+
