--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ h1{
     font-size: 20px;
     font-weight: lighter;
 }
+
+.contentes1_bold{
+    font-size: 10px;
+    font-weight: bold;
+}
 .res{
     font-size: 24px;
 }
@@ -109,3 +114,63 @@ h1{
 }
 
 
+.main_text0{
+    width: 100%;
+    height: 601px;
+    margin-top: -132px;
+    background: #f1f2f3;
+}
+
+.main_text0 >h1{
+    padding-top:  116px;
+    text-align: center;
+}
+
+.main_text0 >.contents1{
+    text-align: center;
+}
+
+.icons{
+
+    display:flex;
+    width: 1280px;
+    height: 302px;
+/*    background: orange;*/
+    margin: auto;
+
+}
+/*
+.contents3{
+    font-size: 14px;
+    font-weight: 100;
+}
+*/
+.icons >li{
+    flex: 1px;
+    background: white;
+    margin-top:49px;
+    height: 302px;
+    text-align: center;
+}
+.icons >li >.icon_img{
+    margin: 36px;
+}
+.icons >li:not(:last-child){
+    margin-right: 20px;
+}
+
+.icons .contents2{
+    width: 190px;
+    margin: auto;
+    letter-spacing: -1px;
+}
+.more{
+    width:100px;
+    height: 30px;
+    background: #2f7af4;
+    color: #fff;
+    font-size: 12px;
+    line-height: 30px;
+
+    margin: auto;
+}
