--- a/style.css
+++ b/style.css
@@ -174,3 +174,79 @@ h1{
 
     margin: auto;
 }
+
+.main_text1{
+    width: 100%;
+    height: 659px;
+}
+
+.main_text1 > h1{
+    padding-top: 50px;
+    text-align: center;
+}
+
+.main_text1 >.contents1{
+    text-align: center;
+}
+
+
+.service{
+    width: 1280px;
+    display: flex;
+    margin: 49px auto;
+    height: 420px;
+/*    background: red;*/
+}
+
+.main_text2{
+    width: 100%;
+    height: 418px;
+    background-image: url(images/intro.png)
+}
+
+.main_text2 > ul{
+    display: flex;
+    padding-top: 128px;
+
+}
+.main_text2 >ul >li{
+    flex: 1;
+    text-align: center;
+}
+
+.main_text2 >ul>li>div>h1,
+.main_text2 >ul>li>div{
+    color: #fff;
+}
+
+
+.more2{
+    width: 220px;
+    height: 40px;
+    border:1px solid #fff;
+    line-height: 40px;
+    cursor: pointer;
+    margin: 30px auto;
+
+
+
+}
+
+
+footer{
+    display: flex;
+    background: #1f1f1f;
+    padding: 30px;
+}
+
+footer >div:first-child{
+    flex: 3;
+    text-align: center;
+    color: #fff;
+}
+
+footer >div:last-child{
+    flex: 9;
+    color: #fff;
+
+}
